# json-gui

./: .bench.env.example  .gitignore  LICENSE  PLAN.md  README.md  icon.pxd  index.html  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  performance.yml  release.yml
scripts/: run-e2e.mjs  tauri.mjs  wdio-app-wrapper.mjs
src/: App.tsx  i18n.ts  index.css  main.tsx  store.test.ts  store.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: expand_bench.rs  memory_bench.rs  perf_bench.rs
src-tauri/capabilities/: default.json
src-tauri/examples/: perf_ci.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  json_index.rs  lib.rs  main.rs  schema.rs
src/bench/: perf.mts
src/components/: ContextMenu.tsx  DetailPanel.tsx  ExportModal.tsx  PropertiesPanel.tsx  RegexInput.tsx  ResizeHandle.tsx  SearchBar.tsx  SearchPanel.tsx  StatusBar.tsx  Toolbar.tsx  TreeNode.tsx  TreePanel.tsx
src/components/search-bar/: AutocompletePortal.tsx  ObjectSearchRow.tsx  ObjectSearchSection.tsx  SearchScopeInput.tsx  SegmentedControl.tsx  TextSearchSection.tsx  ToggleChip.tsx  shared.ts  useSearchBarState.ts
tests/e2e/fixtures/: test.json
tests/e2e/wdio/: package-lock.json  package.json  wdio.conf.mjs
tests/e2e/wdio/helpers/: index.mjs
tests/e2e/wdio/specs/: 01-smoke.spec.mjs  02-file-load.spec.mjs  03-tree.spec.mjs  04-text-search.spec.mjs  05-object-search.spec.mjs  06-large-lazy-rows.spec.mjs  07-search-result-tree-scroll.spec.mjs
