[package]
name = "json-gui"
version = "0.1.0"
edition = "2021"

[lib]
name = "json_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "json-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sonic-rs = "0.3"
rayon = "1"
regex = "1"
memmap2 = "0.9"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
