[package]
name = "json-gui"
version = "1.0.0"
edition = "2024"

[lib]
name = "json_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "json-gui"
path = "src/main.rs"

[[bin]]
name = "jgbench"
path = "src/bin/jgbench.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sonic-rs = "0.5"
rayon = "1"
regex = "1"
memmap2 = "0.9"
memchr = "2"

tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["sync", "time"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[[bench]]
name = "expand_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false

[[bench]]
name = "perf_bench"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
lto = "thin"
inherits = "release"
panic = "unwind"
strip = false
